<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginEnd="160dp"
        android:background="@drawable/ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/signing"
        android:textColor="@color/purple_700"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/imageButtonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="60dp"
        android:text="@string/master"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/mastersSpinner"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:padding="1dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/mastersSpinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mastersSpinner"
        app:layout_constraintTop_toBottomOf="@+id/mastersSpinner" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/mastersSpinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mastersSpinner"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/service"
        app:layout_constraintStart_toStartOf="@+id/editTextTime"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <Spinner
        android:id="@+id/servicesSpinner"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:text="@string/sum"
        app:layout_constraintStart_toStartOf="@+id/servicesSpinner"
        app:layout_constraintTop_toBottomOf="@+id/servicesSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>